[fix] alignment, [change] icon

--- a/src/app/home/personal-details/personal-details.component.scss
+++ b/src/app/home/personal-details/personal-details.component.scss
@@ -36,11 +36,9 @@ section {
       user-select: none;
     }
     .ratings {
-      position: absolute;
       display: flex;
       align-items: center;
-      right: 4rem;
-      top: 0;
+      margin: 0 1rem 0 auto;
       .icon {
         height: 1.5rem;
         width: 1.5rem;
